<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="100">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            app:srcCompat="@drawable/icono_test" />

        <Button
            android:id="@+id/fragment_main_btn_ensayo"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:elevation="24dp"
            android:text="@string/fragment_main_btn_ensayo"
            android:textSize="44sp"
            android:textStyle="bold"
            android:typeface="sans"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="100">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            app:srcCompat="@drawable/icono_calibracion" />

        <Button
            android:id="@+id/fragment_main_btn_calibracion"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:elevation="24dp"
            android:text="@string/fragment_main_btn_calibracion"
            android:textSize="44sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="100">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            app:srcCompat="@drawable/icono_configuracion" />

        <Button
            android:id="@+id/fragment_main_btn_configuracion"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:elevation="24dp"
            android:text="@string/fragment_main_btn_configuracion"
            android:textSize="44sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

</LinearLayout>
