<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_ensayo_card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        card_view:cardCornerRadius="30dp"
        card_view:cardUseCompatPadding="true">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fragment_ensayo_tv_nrpro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="20dp"
                android:text="Test"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="35sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/fragment_ensayo_textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="20dp"
                android:text="J"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_ensayo_textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="20dp"
                android:text="kJ/m²"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="35sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/fragment_ensayo_textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="20dp"
                android:text="Ang. max"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_ensayo_textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="20dp"
                android:text="Ang. °"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="35sp"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_ensayo_card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        card_view:cardCornerRadius="30dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fragment_ensayo_tv_nrprobetas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="000000"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_ensayo_tv_Energia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="000000"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_ensayo_tv_Energia_m2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="000000"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_ensayo_tv_Angulo_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="000000"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_ensayo_tv_Angulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="000000"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_ensayo_tv_Espesor"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:background="#212121"
                android:paddingTop="5dp"
                android:text="0000"
                android:textAlignment="center"
                android:textColor="#ebf748"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_ensayo_btn_setEspesor"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"


                android:text="Espesor (mm)"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_ensayo_tv_Anchura"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:background="#212121"
                android:paddingTop="5dp"
                android:text="0000"
                android:textAlignment="center"
                android:textColor="#ebf748"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_ensayo_btn_setAnchura"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"

                android:ems="15"
                android:text="Anchura (mm)"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_ensayo_tv_AngCero"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:background="#212121"
                android:paddingTop="5dp"
                android:text="0000"
                android:textAlignment="center"
                android:textColor="#ebf748"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_ensayo_btn_angcero"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"

                android:ems="10"
                android:text="@string/fragment_ensayo_btn_angcero"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_ensayo_tv_Angdisparo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:background="#212121"
                android:paddingTop="5dp"
                android:text="0000"
                android:textAlignment="center"
                android:textColor="#ebf748"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_ensayo_btn_angdisparo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"

                android:ems="10"
                android:text="@string/fragment_ensayo_btn_angdisparo"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_ensayo_tv_Calperdidas"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:layout_weight="2"
                android:background="#212121"
                android:paddingTop="5dp"
                android:text="0000"
                android:textAlignment="center"
                android:textColor="#ebf748"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_ensayo_btn_calperdidas2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"

                android:ems="10"
                android:text="Perdidas (J)"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_ensayo_tv_calVelocImpacto"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:layout_weight="2"
                android:background="#212121"
                android:paddingTop="5dp"
                android:text="0000"
                android:textAlignment="center"
                android:textColor="#ebf748"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_ensayo_btn_calvelocImpacto"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"

                android:ems="10"
                android:text="Vel.impacto (m/s)"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">



            <Button
                android:id="@+id/fragment_ensayo_btn_init_lote"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:ems="10"
                android:text="@string/fragment_ensayo_btn_init_lote"
                android:textAlignment="center"
                android:textColor="#ff414e"
                android:textSize="15sp"
                android:textStyle="bold"
                android:enabled="true"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"

            android:orientation="horizontal">


            <Button
                android:id="@+id/fragment_ensayo_btn_calperdidas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:enabled="true"
                android:text="@string/fragment_ensayo_btn_calperdidas"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="visible" />


            <Button
                android:id="@+id/fragment_ensayo_btn_runtest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:enabled="true"
                android:text="Run Test"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/fragment_ensayo_btn_validar"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_gravity="center_vertical"


                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"

                android:enabled="true"
                android:text="Validar test"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/fragment_ensayo_btn_estadisticas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:layout_marginTop="10dp"


                android:layout_weight="2"

                android:enabled="true"
                android:text="Estadisticas"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="visible" />


        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_ensayo_card_view5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/fragment_ensayo_tv_aviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#212121"
            android:text="Avisos:"
            android:textAlignment="center"
            android:textColor="#ebf748"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"/>
    </android.support.v7.widget.CardView>

</LinearLayout>